# JustCooked

./: .gitignore  .pnp.cjs  LICENSE  PUPPETEER_UNIT_TESTS.md  README.md  REDESIGN-TASKS.md  TESTING.md  analyze_ingredient_patterns.py  index.html  jest.config.js  package-lock.json  package.json  test_ingredient_parser.py  tsconfig.json  validate_enhanced_parser.py  vite.config.ts  vitest.config.ts
.storybook/: main.ts  preview.tsx
data/: ingredient_counts.csv
src/: App.tsx  jest-globals.js  jest-setup.ts  styles.css  test-setup.ts  theme.ts  vitest-setup.ts
src-tauri/: Cargo.toml  Info.plist  TESTING.md  entitlements.plist  run_tests.sh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: products.db
src-tauri/src/: app.rs  batch_import.rs  conversions.rs  database.rs  e2e_tests.rs  image_storage.rs  import_queue.rs  ingredient_catalog.rs  ingredient_parsing.rs  ingredient_parsing_tests.rs  lib.rs  logging.rs  main.rs  parsing_feedback.rs  recipe_import.rs
src-tauri/src/batch_import/: tests.rs  time_estimation_tests.rs
src-tauri/src/database/: tests.rs
src-tauri/src/image_storage/: tests.rs
src-tauri/src/ingredient_parsing/: tests.rs
src-tauri/src/recipe_import/: tests.rs
src-tauri/tests/: integration_tests.rs  mod.rs  property_tests.proptest-regressions  property_tests.rs  test_utils.rs
src/__tests__/: App.test.tsx  AppRoutes.test.tsx
src/components/: AdvancedSearchModal.stories.tsx  AdvancedSearchModal.tsx  AppLayout.stories.tsx  AppLayout.tsx  BarcodeScanner.stories.tsx  PantryManager.tsx  (+36 more)
(+153 files in other folders)
